# Apricot-Hard-Disk-Interface

./: .gitignore  Apricot-Hard-Disk-Interface-cache.lib  Apricot-Hard-Disk-Interface-rescue.dcm  Apricot-Hard-Disk-Interface-rescue.lib  Apricot-Hard-Disk-Interface.csv  Apricot-Hard-Disk-Interface.dsn  Apricot-Hard-Disk-Interface.kicad_pcb  Apricot-Hard-Disk-Interface.kicad_pcb-1.1-prerouting  Apricot-Hard-Disk-Interface.kicad_pcb-Mki-routed  Apricot-Hard-Disk-Interface.kicad_prl  Apricot-Hard-Disk-Interface.kicad_pro  Apricot-Hard-Disk-Interface.kicad_sch  Apricot-Hard-Disk-Interface.rules  Apricot-Hard-Disk-Interface.sch-bak  Apricot-Hard-Disk-Interface.ses  Apricot-Hard-Disk-Interface.xml  Data-Buffer.kicad_sch  Data-Buffer.sch  Data-Buffer.sch-bak  README.md  fp-info-cache  sym-lib-table
GAL/: ADDRESS-DECODER.abs  ADDRESS-DECODER.doc  ADDRESS-DECODER.jed  ADDRESS-DECODER.lst  ADDRESS-DECODER.mx  ADDRESS-DECODER.sim  CB739530  HD-DECODER.abs  HD-DECODER.doc  HD-DECODER.jed  HD-DECODER.lst  HD-DECODER.sim  hd-decoder.pld
Gerber/: Apricot-Hard-Disk-Interface-B_Cu.gbr  Apricot-Hard-Disk-Interface-B_Mask.gbr  Apricot-Hard-Disk-Interface-B_Paste.gbr  Apricot-Hard-Disk-Interface-F_Cu.gbr  (+10 more)
Pico/source/: CMakeLists.txt  Readme.md  apricot-hd.h  buffer.c  create_image.c  debug.c  gpio_ops.c  gpio_ops.c.orig  host_interface.c  main.c  pin_defs.h  read_config.c  sd_stdio.h  wd_command_interpreter.c
Pico/source/no-OS-FatFS/FatFs_SPI/ff15/source/: ffconf.h
Pico/source/no-OS-FatFS/example/: CMakeLists.txt  hw_config.c
Pico/source/no-OS-FatFS/simple_example/: CMakeLists.txt
(+4 files in other folders)
